fix: remove overflow

--- a/src/app/styles/base.css
+++ b/src/app/styles/base.css
@@ -1,6 +1,5 @@
 html {
   font-family: "Inter", sans-serif;
-  overflow-y: hidden;
 }
 
 html,
